--- a/index.html
+++ b/index.html
@@ -11,14 +11,35 @@
         <h1 class="title">Hannu's Landing</h1>
         <ul class="links">
             <li><a href="#">Info</a></li>
-            <li><a href="#">Moar</a></li>
+            <li><a href="#">More</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
-    <div class="header-main">
-        <h1 class="content">This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-       <img style="height: 100px; width: auto;" src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="placeholder image">
+    <div class="header-content">
+        <div class="test">
+            <h1 class="title">This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        </div>
+        <div class="image-container">
+            <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="placeholder image">
+        </div>
+    </div>
+    <div class="infomation">
+        <h1 class="information-text">Some random information</h1>
+        <ul class="listimages">
+            <li> 
+                <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="placeholder image">
+            </li>
+            <li> 
+                <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="placeholder image">
+            </li>
+            <li> 
+                <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="placeholder image">
+            </li>
+            <li> 
+                <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="placeholder image">
+            </li>
+        </ul>
     </div>
 </body>
 </html>
