--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it... Who knows? All i know is that it looks nice.</p>
         <p class="signature">-Thor, God of Thunder</p>
     </div>
-    <div style="height: 300px;" class="signup-section"></div>
+    <div class="signup-section">
+        <div class="banner">
+            <div class="text">
+                <p class="banner-title">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <a href="#" class="banner-button">Sign up!</a>
+        </div>
+    </div>
+    <footer>
+        Copyright © Hannu's Landing 2024
+    </footer>
 </body>
 </html>
